--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "@types/moment": "^2.13.0",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/tinycolor2": "^1.4.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "imports-loader": "^0.8.0",
+    "jquery": "^3.3.1",
     "loader-utils": "^1.1.0",
-    "ts-loader": "^2.3.7",
-    "typescript": "^2.4.2",
-    "webpack": "^3.6.0"
-  },
-  "dependencies": {
+    "ng-annotate-webpack-plugin": "^0.3.0",
     "perfect-scrollbar": "^1.3.0",
     "tether-drop": "^1.4.2",
-    "tinycolor2": "^1.4.1"
-  }
+    "tinycolor2": "^1.4.1",
+    "ts-loader": "^4.2.0",
+    "typescript": "^2.8.3",
+    "webpack": "4.19.1",
+    "webpack-cli": "^2.1.2"
+  },
+  "dependencies": {}
 }
